# kjarni

./: .gitignore  CMakeLists.txt  README.md
include/: common_tmi.h  entity.h  entity_model.h  entity_model.hpp  i_json_gateway.h  i_json_repository.h  i_module.h  i_property_tree.h  i_service.h  json_gateway_files.h  json_model.h  json_repository_files.h  kjarni_traits.h  locator.h  module_loader.h  property_tree.h  traits.h  utils.h
include/command/: command.h  command_service.h
include/entity/: entity.h  entity_model.h  entity_model.hpp  i_entity_repository.h  i_repository_factory.h  kjarni_traits.h  named.h  parametrised.h
include/geo/: cartesian.h  cartesian_line.h  cartesian_path.h  cartesian_rect.h  geo_traits.h  geodetic.h  geodetic_path.h  geodetic_rect.h
include/locator/: i_service.h
include/mission/: i_missions_repository.h  i_missions_service.h  mission.h  mission_operation.h  route.h  (+13 more)
src/: entity.cpp  json_model.cpp  json_repository_files.cpp  json_source_file.cpp  locator.cpp  module_loader.cpp  property_tree.cpp  utils.cpp
tests/: CMakeLists.txt  test_base_models.cpp  test_cartesian.cpp  test_comm_link.cpp  test_comm_links_service.cpp  test_communication.cpp  test_communication_description.cpp  test_entity.cpp  test_entity_model.cpp  test_geodetic.cpp  test_link_configuration.cpp  test_link_specification.cpp  test_locator.cpp  test_magic_property.cpp  test_mission.cpp  test_mission_route_item.cpp  test_mission_service.cpp  test_mission_traits.h  test_missions_service.cpp  test_mixins.cpp  test_parameter.cpp  test_plain_parametrised.cpp  test_property_tree.cpp  test_route.cpp  test_route_item.cpp  test_route_service.cpp  test_route_traits.h  test_typed_parametrised.cpp  test_vehicle.cpp  test_vehicles_features.cpp  test_vehicles_service.cpp  test_waypoint.cpp  test_waypoint_item.cpp
tests/missions/: test_mission_factory.h  test_mission_route.cpp  test_mission_route_item.cpp  test_mission_service.cpp
(+273 files in other folders)
